# Datathon

./: .replit  MonarchWebScrapper.ipynb  README.md  data_processing.py  filtered_data_2.csv  gpt_monarch2.ipynb  main.py  pyproject.toml  replit_zip_error_log.txt  updated_dataset_2024.csv  visualizations.py
.cache/matplotlib/: fontlist-v390.json
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
